fix modal close spacing in safari

--- a/src/components/calcite-modal/calcite-modal.scss
+++ b/src/components/calcite-modal/calcite-modal.scss
@@ -100,6 +100,7 @@ focus-trap {
 
 .modal__close {
   padding: $baseline * 0.75;
+  margin: 0;
   order: 2;
   flex: 0 0 auto;
   transition-delay: 300ms;
